--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <nav>
-            <ul>
+            <ul class="navigation">
                 <li>WebpackLitPro</li>
                 <li>Do sth</li>
                 <li>Do sth else</li>
@@ -26,5 +26,6 @@
 
     </footer>
 
+    <script src="dist/bundle.js"></script>
 </body>
 </html>
